<-->Created by Kapoor and Smith</-->
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical" android:layout_height="match_parent"
    tools:context="com.smith.kapoor.theeisenhowerwaytogtd.fragments.OptionsFragment">

    <Button
    android:layout_marginTop="30dp"
    android:id="@+id/syncWithGoogle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sync_button"
    android:textSize="30dp"
    android:layout_gravity="center"
    android:enabled="false"/>

    <Button
    android:layout_marginTop="30dp"
    android:id="@+id/logoutGoogle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/logout_button"
    android:textSize="30dp"
    android:layout_gravity="center"
    android:enabled="false"/>

    <Button
    android:layout_marginTop="30dp"
    android:id="@+id/colors"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/colors_button"
    android:textSize="30dp"
    android:layout_gravity="center"/>


    <Button
    android:layout_marginTop="30dp"
    android:id="@+id/back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/back"
    android:textSize="30dp"
    android:layout_gravity="center"/>

</LinearLayout>