<-->Created by Kapoor and Smith</-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/urgent"
            android:textSize="25sp"
            android:id="@+id/textView"
            android:layout_toEndOf="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView4"
            android:layout_marginLeft="-30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_urgent"
            android:textSize="25sp"
            android:id="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:rotation="270"
                android:text="@string/critical"
                android:textSize="25sp"
                android:id="@+id/textView4"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="-60dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:rotation="270"
                android:text="@string/not_critical"
                android:textSize="25sp"
                android:layout_marginLeft="-60dp"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/urgent_critical"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:text="@string/important_urgent"
        android:textSize="15sp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="-20dp"/>

    <Button
        android:id="@+id/not_urgent_critical"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:text="@string/important_not_urgent"
        android:textSize="15sp"
        android:layout_alignTop="@+id/urgent_critical"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/holo_blue_dark"/>

    <Button
        android:id="@+id/urgent_not_critical"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:text="@string/not_important_urgent"
        android:textSize="15sp"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignLeft="@+id/urgent_critical"
        android:layout_alignStart="@+id/urgent_critical"
        android:layout_marginTop="-40dp"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/holo_blue_dark"/>

    <Button
        android:id="@+id/unassigned"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:text="@string/not_important_not_urgent"
        android:textSize="15sp"
        android:layout_alignTop="@+id/urgent_not_critical"
        android:layout_alignLeft="@+id/not_urgent_critical"
        android:layout_alignStart="@+id/not_urgent_critical"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/holo_blue_dark"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Options"
        android:id="@+id/options_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
